# Program-interaction-via-sockets

./: README.md
Client_app/: CMakeLists.txt  app.cpp
Client_app/external-libraries/boost/lib/: libboost_system-vc143-mt-x32-1_84.lib
Client_app/external-libraries/boost/lib/cmake/boost_headers-1.84.0/: boost_headers-config.cmake
Client_app/external-libraries/boost/lib/cmake/boost_system-1.84.0/: boost_system-config.cmake
Client_app/headers/: DataProcessor.hpp  NetworkManager.hpp
Client_app/headers/interfaces/: IDataProcessor.hpp  INetworkManager.hpp
Client_app/sources/: DataProcessor.cpp  NetworkManager.cpp
Server_app/: CMakeLists.txt  app.cpp
Server_app/external-libraries/boost/lib/: libboost_system-vc143-mt-gd-x32-1_84.lib  libboost_system-vc143-mt-gd-x64-1_84.lib  libboost_system-vc143-mt-x64-1_84.lib
Server_app/external-libraries/boost/lib/cmake/boost_system-1.84.0/: libboost_system-variant-vc143-mt-gd-x32-1_84-static.cmake  libboost_system-variant-vc143-mt-gd-x64-1_84-static.cmake  libboost_system-variant-vc143-mt-x32-1_84-static.cmake  libboost_system-variant-vc143-mt-x64-1_84-static.cmake
Server_app/headers/: DataReceiver.hpp
Server_app/headers/interfaces/: IDataReceiver.hpp
Server_app/sources/: DataReceiver.cpp
